// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with an expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $12.34
  </h2>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totaling 
    $123.44
  </h2>
</div>
`;

exports[`should render nothing with no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totaling 
    $0.00
  </h2>
</div>
`;
